--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@textile/tableland": "^0.1.2",
     "bootstrap": "^4.5.2",
     "ethers": "^5.6.0",
     "jquery": "^3.5.1",
