--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "3.4.3",
     "react-switch": "^5.0.1",
+    "react-table": "^7.7.0",
+    "react-table-6": "^6.11.0",
+    "react-table-v6": "^6.8.6",
     "react-typical": "^0.1.3",
     "react-vertical-timeline-component": "^3.3.1"
   },
