--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -10,6 +11,7 @@
     "bootstrap": "^4.5.2",
     "ethers": "^5.6.0",
     "jquery": "^3.5.1",
+    "material-table": "^1.36.0",
     "react": "^16.13.1",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.3.0",
