--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@textile/tableland": "^0.1.2",
     "bootstrap": "^4.5.2",
+    "dotenv": "^16.0.0",
     "ethers": "^5.6.0",
     "jquery": "^3.5.1",
     "material-table": "^1.40.0",
