--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@textile/tableland": "^0.1.2",
+    "axios": "^0.26.1",
     "bootstrap": "^4.5.2",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.0",
